# libonnx

./: .gitignore  CMakeLists.txt
examples/hello/: CMakeLists.txt
src/: CMakeLists.txt  benchmark.c  benchmark.h  onnx.c  onnx.c.in  onnx.h
src/default/: default.c.in  default.h  op_declaration.h.in
tests/: CMakeLists.txt  main.c
